--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -229,7 +229,7 @@
 
   <h5 mat-dialog-title class="mat-subtitle-1">Suppression du produit</h5>
   <div mat-dialog-content class="mat-subtitle-2 lh-16">
-    Êtes-vous sûr de vouloir supprimer ce produit ?
+    Voulez-vous retirer ce produit de votre stock ?
   </div>
   <div mat-dialog-actions class="p-24 p-t-0">
 
