--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -12,7 +12,11 @@
 
         <div class="field col-2">
           <label htmlFor="datePurchase">Date </label>
-          <p-calendar [(ngModel)]="data.datePurchase" name="datePurchase" id="datePurchase" ></p-calendar>
+          <p-calendar [(ngModel)]="datePurchase" 
+          [showOnFocus]="false"
+            showIcon="true"
+            (onFocus)="$event.preventDefault()">
+          name="datePurchase" id="datePurchase" ></p-calendar>
         </div>
         
         <div class="field col-5">
