--- a/src/app/pages/plat/plat.component.html
+++ b/src/app/pages/plat/plat.component.html
@@ -1,1 +1,88 @@
-<p>plat works!</p>
+<p-tabView [(activeIndex)]="activeIndex">
+
+
+    <!--Panel liste des purchases-->
+    <p-tabPanel header="Liste des Plats">
+      <div class="">
+        <div class="card">
+            <!--<h5>Purchase List</h5>-->
+  
+            <p-table #dt2 [value]="dishes"  responsiveLayout="scroll"
+            [globalFilterFields]="['reference','name','poids','cout','brut','brut','quantite','detailCuisine','detailCuisine','preparationIngredient','unit','categorie']">
+  
+  
+                <ng-template pTemplate="caption">
+                  <div class="flex">
+                      <!--<button pButton label="Tout afficher" class="p-button-outlined" icon="pi pi-filter-slash" (click)="tableShort.clear(dt2)"></button>-->
+                      <span class="p-input-icon-left mr-auto">
+                          <i class="pi pi-search"></i>
+                          <!--<input pInputText type="text" [(ngModel)]="motRecherche" (input)="dt2.filterGlobal(motRecherche, 'contains')" placeholder="Rechercher" />-->
+                          <input pInputText type="text" [(ngModel)]="motRecherche" (input)="recherche()" placeholder="Rechercher" />
+                      </span>
+                  </div>
+                </ng-template>
+  
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon field="reference"></p-sortIcon></th>
+                        <th pSortableColumn="name" pColumnFilter="name">Nom<p-sortIcon field="name"></p-sortIcon></th>
+                        <th pSortableColumn="categorie" pColumnFilter="categorie">Categorie<p-sortIcon field="categorie"></p-sortIcon></th>
+  
+                        <th pSortableColumn="estimationPlatAVendre" pColumnFilter="estimationPlatAVendre">Estimation Plat A Vendre<p-sortIcon field="estimationPlatAVendre"></p-sortIcon></th>
+                        <th pSortableColumn="platVendu" pColumnFilter="platVendu">Plat Vendu<p-sortIcon field="platVendu"></p-sortIcon></th>
+                        <!--<th pSortableColumn="poids" pColumnFilter="poids">Poids<p-sortIcon field="poids"></p-sortIcon></th>
+  
+  
+                        <th pSortableColumn="cout" pColumnFilter="cout">Cout<p-sortIcon field="cout"></p-sortIcon></th>-->
+  
+                        <th></th>
+                        <th></th>
+  
+                        <!--<th></th>-->
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-dishes>
+                    <tr  class="cursor-pointer">
+                      <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.reference}}</td>
+                      <td (click)="showDishesDetail($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.name}}</td>
+                      <!--<td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.address?.address?.label}}</td>-->
+  
+                      <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.categoryMenu?.name }}</td>
+  
+                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.estimationPlatAVendre}} </td>
+                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.platVendu}} </td>
+  
+                     <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.poids}} </td>
+                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.cout }}</td>-->
+  
+                    <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes.entryDate | date:'yyyy-MM-dd HH:mm'}}</td> -->
+  
+                      <!--<td style="width: 15%;" (click)="show($event,dishes)">
+                        <button pButton pRipple type="button"  icon="pi pi-eye" class="p-button p-component p-button-text p-button-icon-only"></button>
+                      </td>-->
+  
+                      <td  style="width: 15%;">
+                        <button pButton pRipple type="button" (click)="show('top-right',dishes)" icon="pi pi-pencil" class="p-button p-component p-button-text p-button-icon-only"></button>
+                      </td>
+  
+                      <td style="width: 15%;">
+                        <button pButton pRipple type="button" (click)="delete('top-right',dishes)" icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only"></button>
+                      </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <p-paginator (onPageChange)="onPageChange($event)"  [rows]="rows" [totalRecords]="totalRows" [rowsPerPageOptions]="[5, 10, 15]"></p-paginator>
+  
+          </div>
+  
+      </div>
+    </p-tabPanel>
+  
+    <p-tabPanel header="Nouveau Plat">
+      <app-newdishes (parentFun)="changeTabs()"></app-newdishes>
+    </p-tabPanel>
+  
+  </p-tabView>
+  <p-toast></p-toast>
+  <p-confirmDialog [style]="{ width: '50vw' }" key="positionDialog" [position]="positionModalConfirm" rejectButtonStyleClass="p-button-outlined"></p-confirmDialog>
+  
