--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -12,11 +12,13 @@
 
         <div class="field col-2">
           <label htmlFor="datePurchase">Date </label>
-          <p-calendar [(ngModel)]="datePurchase" 
+          <p-calendar [(ngModel)]="data.datePurchase" 
+          dateFormat="dd-mm-yy" 
           [showOnFocus]="false"
             showIcon="true"
-            (onFocus)="$event.preventDefault()">
+            
           name="datePurchase" id="datePurchase" ></p-calendar>
+          <!--(onFocus)="$event.preventDefault()"-->
         </div>
         
         <div class="field col-5">
@@ -192,10 +194,10 @@
             </thead>
             <tr *ngFor="let detail of detailPurchasesForms2,let i=index">
               <td>{{detail?.product?.name}}({{detail.product?.category?.name}})</td>
-              <td>{{detail.product.conditioning?.name}}</td>
+              <td>{{detail?.product?.conditioning?.name}}</td>
               <td>{{detail?.quantity}} ({{detail?.unit?.code}})</td>
-              <td>{{detail.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td>
-              <td>{{detail.totalPrice}}</td>
+              <td>{{detail?.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td>
+              <td>{{detail?.totalPrice}}</td>
               <td>
                 <button pButton pRipple type="button"  icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only" (click)="confirmDeleteDetail(detail,i)"></button>
               </td>
