--- a/src/app/pages/product/modalproduct/modalproduct.component.html
+++ b/src/app/pages/product/modalproduct/modalproduct.component.html
@@ -1,7 +1,7 @@
 
 <div class="product-details">
   <h2>{{ data.name }}</h2>
-  <p>Stock: {{ product?.quantity }} {{ data?.unit?.code }}</p>
+  <p>Stock: {{ product?.quantity }} {{ data.unit.code }}</p>
   <p>Prix: {{ data.price }}</p>
   <p>Marque: {{ data.brand?.name }}</p>
   <p>Category: {{ data.category?.name }}</p>
