--- a/src/app/pages/course/modalpurchase/modalpurchase.component.scss
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.scss
@@ -118,7 +118,7 @@ table>tr{
 }
 
 .divtableau{
-  max-height: 160px;
+  // max-height: 160px;
   padding: 5px;
 overflow: hidden;
 overflow-y: scroll;
