--- a/src/app/pages/create-course/create-course.component.scss
+++ b/src/app/pages/create-course/create-course.component.scss
@@ -113,7 +113,7 @@ $color11: #2d674d;
 }
 
 .divtableau {
-  max-height: 160px;
+  // max-height: 160px;
   padding: 5px;
   overflow: auto;
   border: 1px solid $noir;
