--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -49,9 +49,9 @@
             Action
           </th>
           <td mat-cell *matCellDef="let product" class="action-link">
-            <a (click)="openDialogEdit(product?.product)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
+            <a (click)="openDialogEdit(product)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
                 class="icon-18"></i-tabler></a>
-            <a (click)="deleteProduct(product?.product)" class="m-r-10 cursor-pointer">
+            <a (click)="deleteProduct(product)" class="m-r-10 cursor-pointer">
               <i-tabler name="trash" class="icon-18"></i-tabler>
             </a>
           </td>
@@ -156,7 +156,7 @@
         <div class="col-lg-6">
           <label for="name">Nom du Produit</label>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput id="name" placeholder="Entrez le nom du produit" required name="name"
+            <input [disabled]="true" matInput id="name" placeholder="Entrez le nom du produit" required name="name"
               [(ngModel)]="productData.name" />
           </mat-form-field>
         </div>
@@ -165,7 +165,7 @@
         <div class="col-lg-6">
           <label for="unit">Unité</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select id="unit" [(ngModel)]="productData.unit" name="unit" required>
+            <mat-select [disabled]="true" id="unit" [(ngModel)]="productData.unit" name="unit" required>
               <mat-option *ngFor="let unit of units" [value]="unit">
                 {{ unit.name }}
               </mat-option>
@@ -177,7 +177,7 @@
         <div class="col-lg-6">
           <label for="category">Catégorie</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select id="category" [(ngModel)]="productData.category" name="category" required>
+            <mat-select [disabled]="true" id="category" [(ngModel)]="productData.category" name="category" required>
               <mat-option *ngFor="let category of categorys" [value]="category">
                 {{ category.name }}
               </mat-option>
@@ -189,7 +189,7 @@
         <div class="col-lg-6">
           <label for="conditioning">Conditionnement</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select id="conditioning" [(ngModel)]="productData.conditioning" name="conditioning" required>
+            <mat-select [disabled]="true" id="conditioning" [(ngModel)]="productData.conditioning" name="conditioning" required>
               <mat-option *ngFor="let conditioning of conditionings" [value]="conditioning">
                 {{ conditioning.name }}
               </mat-option>
@@ -209,8 +209,9 @@
         <div class="col-lg-6">
           <label for="conditioning">Stock</label>
           <mat-form-field appearance="outline" class="w-100 hide-hint">
-            <input type="number" placeholder="Entrez une description du produit" name="description" matInput
-              class="form-control" min="1" />
+            <input  type="number" placeholder="Entrez le stock" name="quantity"
+             [(ngModel)]="productData.quantity"
+              matInput class="form-control" min="1" />
           </mat-form-field>
         </div>
 
@@ -219,7 +220,7 @@
         <div class="col-lg-12">
           <label for="description">Description</label>
           <mat-form-field appearance="outline" class="w-100">
-            <textarea matInput id="description" placeholder="Entrez une description du produit" name="description"
+            <textarea [disabled]="true" matInput id="description" placeholder="Entrez une description du produit" name="description"
               [(ngModel)]="productData.description"></textarea>
           </mat-form-field>
         </div>
@@ -228,7 +229,7 @@
       <div class="row">
         <div class="col-lg-6">
           <button mat-flat-button color="primary" class="large-button" (click)="editProduct()"
-            [disabled]="!productForm.valid"> Modifier </button>
+            > Modifier </button>
         </div>
         <div class="col-lg-6">
           <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
@@ -242,10 +243,10 @@
 <!-- delete -->
 <ng-template #dialogTemplateDelete>
 
-  <h5 mat-dialog-title class="mat-subtitle-1">Suppression du produit</h5>
-  <div mat-dialog-content class="mat-subtitle-2 lh-16">
+  <h5 mat-dialog-title class="mat-subtitle-1"> Voulez-vous retirer ce produit de votre stock ?</h5>
+  <!-- <div mat-dialog-content class="mat-subtitle-2 lh-16">
     Voulez-vous retirer ce produit de votre stock ?
-  </div>
+  </div> -->
   <div mat-dialog-actions class="p-24 p-t-0">
 
     <button (click)="closeDialog()" mat-flat-button color="primary" mat-dialog-close cdkFocusInitial>
