udate conversion part

--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -301,4 +301,5 @@
 
   </div>
 
- 
+  <p-confirmDialog [style]="{ width: '50vw' }" key="positionDialog" [position]="positionModalConfirm"
+  rejectButtonStyleClass="p-button-outlined"></p-confirmDialog>
