--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -49,7 +49,7 @@
             Action
           </th>
           <td mat-cell *matCellDef="let product" class="action-link">
-            <a (click)="openDialogEdit(product)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
+            <a (click)="productUpdate(product)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
                 class="icon-18"></i-tabler></a>
             <a (click)="deleteProduct(product)" class="m-r-10 cursor-pointer">
               <i-tabler name="trash" class="icon-18"></i-tabler>
@@ -189,7 +189,8 @@
         <div class="col-lg-6">
           <label for="conditioning">Conditionnement</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select [disabled]="true" id="conditioning" [(ngModel)]="productData.conditioning" name="conditioning" required>
+            <mat-select [disabled]="true" id="conditioning" [(ngModel)]="productData.conditioning" name="conditioning"
+              required>
               <mat-option *ngFor="let conditioning of conditionings" [value]="conditioning">
                 {{ conditioning.name }}
               </mat-option>
@@ -201,16 +202,15 @@
         <div class="col-lg-6">
           <label for="conditioning">Pourcentage de perte</label>
           <mat-form-field appearance="outline" class="w-100 hide-hint">
-            <input type="number" placeholder="Entrez une description du produit" name="lostpercentage"
-              [(ngModel)]="productData.lossPercentage" matInput class="form-control" min="1" />
+            <input type="number" placeholder="Entrez un pourcentage de perte" name="lostpercentage"
+              [(ngModel)]="productData.lossPercentage" matInput class="form-control" min="1" step="0.01"/>
           </mat-form-field>
         </div>
 
         <div class="col-lg-6">
           <label for="conditioning">Stock</label>
           <mat-form-field appearance="outline" class="w-100 hide-hint">
-            <input  type="number" placeholder="Entrez le stock" name="quantity"
-             [(ngModel)]="productData.quantity"
+            <input type="number" placeholder="Entrez le stock" name="quantity" [(ngModel)]="productData.quantity"
               matInput class="form-control" min="1" />
           </mat-form-field>
         </div>
@@ -220,16 +220,15 @@
         <div class="col-lg-12">
           <label for="description">Description</label>
           <mat-form-field appearance="outline" class="w-100">
-            <textarea [disabled]="true" matInput id="description" placeholder="Entrez une description du produit" name="description"
-              [(ngModel)]="productData.description"></textarea>
+            <textarea [disabled]="true" matInput id="description" placeholder="Entrez une description du produit"
+              name="description" [(ngModel)]="productData.description"></textarea>
           </mat-form-field>
         </div>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
-          <button mat-flat-button color="primary" class="large-button" (click)="editProduct()"
-            > Modifier </button>
+          <button mat-flat-button color="primary" class="large-button" (click)="editProduct()"> Modifier </button>
         </div>
         <div class="col-lg-6">
           <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
@@ -238,6 +237,10 @@
     </form>
   </mat-dialog-content>
 </ng-template>
+
+<p-dialog [(visible)]="productDialog" [style]="{width: '850px'}" header="Modification d'un produit" styleClass="custom-dialog" [modal]="true" class="p-fluid">
+  
+</p-dialog>  
 
 
 <!-- delete -->
