--- a/src/app/pages/product/update-product/update-product.component.html
+++ b/src/app/pages/product/update-product/update-product.component.html
@@ -2,32 +2,29 @@
     <form class=" newform col-12" #f="ngForm" (ngSubmit)="editProduct()">
       <div class="card p-fluid">
         <div class="grid">
-          <div class="col-6">
+          <div class="col-4">
             <div class="field">
               <label htmlFor="name">Nom</label>
-              <input pInputText id="name" [(ngModel)]="productData.product.name" name="name" type="text" placeholder="Nom produit" required />
+              <input [disabled]="true" pInputText id="name" [(ngModel)]="productData.product.name" name="name" type="text" placeholder="Nom produit" required />
             </div>
           </div>
-          <div class="col-6">
-            <div class="field ">
-              <label htmlFor="unit">Unité</label>
-              <p-dropdown [options]="units" optionLabel="name" name="unit" [(ngModel)]="productData.product.unit"></p-dropdown>
-            </div>
-          </div>
-          <div class="col-6">
+          <div class="col-4">
             <div class="field ">
               <label htmlFor="category">Categorie</label>
-              <p-dropdown [options]="categorys" optionLabel="name" name="category" [(ngModel)]="productData.product.category"></p-dropdown>
+              <p-dropdown [disabled]="true" [options]="categorys" optionLabel="name" name="category" [(ngModel)]="productData.product.category"></p-dropdown>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <div class="field ">
-              <label htmlFor="conditioning">Condition</label>
-              <p-dropdown [options]="conditionings" optionLabel="name" name="conditioning"
+              <label htmlFor="conditioning">Conditionnement</label>
+              <p-dropdown [disabled]="true" [options]="conditionings" optionLabel="name" name="conditioning"
                 [(ngModel)]="productData.product.conditioning"></p-dropdown>
             </div>
           </div>
-          <div class="col-6">
+
+         
+          
+          <div class="col-4">
             <div class="field">
               <label htmlFor="lostpercentage">Pourcentage de perte</label>
               <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
@@ -37,19 +34,25 @@
   
           </div>
 
-          <div class="col-6">
+          <div class="col-4">
             <div class="field">
               <label htmlFor="quantity">Stock</label>
               <p-inputNumber mode="decimal" [minFractionDigits]="2" name="quantity" id="quantity"
                 [(ngModel)]="productData.quantity" [showButtons]="true" [min]="0">
               </p-inputNumber>
             </div>
-  
+          </div>
+
+          <div class="col-4">
+            <div class="field ">
+              <label htmlFor="unit">Unité</label>
+              <p-dropdown  [disabled]="true" [options]="units" optionLabel="name" name="unit" [(ngModel)]="productData.product.unit"></p-dropdown>
+            </div>
           </div>
         </div>
   
         <p>Description</p>
-        <textarea rows="5" cols="10" [(ngModel)]="productData.description" name="description" placeholder="Description"
+        <textarea rows="5" [disabled]="true"  cols="10" [(ngModel)]="productData.description" name="description" placeholder="Description"
           pInputTextarea></textarea>
   
         <!-- <label id="erreur" *ngIf="isError">{{erreur}}</label>
