--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -201,7 +201,7 @@
                     <th>Catégorie</th>
                     <th>Conditionnement</th>
                     <th>Quantité (unité)</th>
-                    <th>Prix/unité</th>
+                    <!-- <th>Prix/unité</th> -->
                     <th>Prix Total</th>
                     <th>Action</th>
                   </tr>
@@ -212,9 +212,9 @@
                     <td>{{ detail?.product?.category?.name }}</td>
                     <td>{{ detail?.product?.conditioning?.name }}</td>
                     <td>{{ detail?.quantity }} ({{ detail?.unit?.code }})</td>
-                    <td>{{ detail?.value | number:'1.2-2' }}
-                      /{{ detail?.unit?.code }}</td>
-                    <td>{{ detail?.totalPrice }}</td>
+                    <!-- <td>{{ detail?.value | number:'1.2-2' }}
+                      /{{ detail?.unit?.code }}</td> -->
+                    <td>{{ detail?.totalPrice }} ({{curenn}})</td>
                     <td>
                       <button pButton pRipple type="button" icon="pi pi-trash"
                         class="p-button p-component p-button-text p-button-icon-only"
