--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -195,7 +195,7 @@
             <tr *ngFor="let detail of detailPurchasesForms2,let i=index">
               <td>{{detail?.product?.name}}({{detail.product?.category?.name}})</td>
               <td>{{detail?.product?.conditioning?.name}}</td>
-              <td>{{detail?.quantity}} ({{detail?.unit?.code}})</td>
+              <td>{{detail?.realQ || detail?.quantity}} ({{detail?.realUnit || detail?.unit?.code}})</td>
               <!-- <td>{{detail?.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td> -->
               <td>{{detail?.totalPrice}} {{ (cuuren) }}</td>
               <td>
