--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -12,6 +12,7 @@
 
           <div class="field col-2">
             <label htmlFor="datePurchase">Date</label>
+            <input type="text" class="d-none">
             <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase"></p-calendar>
           </div>
 
@@ -211,7 +212,7 @@
                     <td>{{ detail?.product?.name }}</td>
                     <td>{{ detail?.product?.category?.name }}</td>
                     <td>{{ detail?.product?.conditioning?.name }}</td>
-                    <td>{{ detail?.quantity }} ({{ detail?.unit?.code }})</td>
+                    <td>{{ detail?.realQ }} ({{ detail?.realUnit }})</td>
                     <!-- <td>{{ detail?.value | number:'1.2-2' }}
                       /{{ detail?.unit?.code }}</td> -->
                     <td>{{ detail?.totalPrice }} ({{curenn}})</td>
